--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -1,519 +1,1 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-
-ul {
-    list-style-type: none !important;
-    padding: 0 !important;
-}
-
-.footer .footer-menu li {
-    padding-bottom: 5px !important;
-}
-
-a {
-    color: wheat !important;
-    text-decoration: none !important;
-}
-
-.footer .footer-menu a:hover {
-    color: white !important;
-}
-
-ul.flex {
-    display: flex;
-}
-
-.newslater {
-    border-radius: 99em;
-}
-
-.header .navbar a.navbar-brand {
-    width: 20%;
-}
-
-#headerCategories .header-sub-menu {
-    width: 205px;
-    right: 0;
-    z-index: 99;
-}
-
-#headerCategories .header-sub-menu li {
-    color: black !important;
-}
-
-#headerCategories .header-sub-menu li:hover>i {
-    color: #DC3545;
-}
-
-#headerCategories:hover>#categories-drop-down {
-    display: block !important;
-}
-
-.breadcrumb a {
-    color: #002E5B !important;
-}
-
-.breadcrumb .row {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.alert a {
-    color: #002E5B !important;
-}
-
-.product-details-header .cart .number input,
-a {
-    width: 100%;
-}
-
-.cart-view {
-    position: fixed;
-    top: 40%;
-    right: 0;
-    box-sizing: border-box;
-    z-index: 9999;
-}
-
-.cart-view hr {
-    margin: 0 !important;
-}
-
-.cart-view img {
-    padding: 8px 0 8px 0;
-}
-.testimonial img{
-    border-radius: 50%;
-    border: 5px solid gray;
-    width: 10% !important;
-    display: initial !important;
-}
-/* The footer menu view*/
-.side-menu-bar {
-    height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: fixed;
-    /* Stay in place */
-    z-index: 2000;
-    /* Stay on top */
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the cartbar */
-}
-
-.side-menu-bar ul {
-    padding-left: 20px !important;
-    padding-right: 20px !important;
-}
-
-.side-menu-bar ul li {
-    padding-bottom: .25rem;
-    padding-top: .25rem;
-    color: wheat !important;
-}
-
-.side-menu-bar .side-menu-closebtn {
-    position: absolute;
-    top: 9px;
-    text-decoration: none;
-    color: red !important;
-    right: -80%;
-    font-size: 45px;
-}
-
-.footer-menu-list a {
-    text-decoration: none;
-}
-
-/* The cartbar menu */
-.cartbar {
-    height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: fixed;
-    /* Stay in place */
-    z-index: 2000;
-    /* Stay on top */
-    top: 0;
-    right: 0;
-    background-color: #36344D;
-    /* Black*/
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the cartbar */
-}
-
-/* The cartbar links */
-.cartbar a {
-    text-decoration: none;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-.cartbar a.closebtn {
-    padding: 8px 8px 8px 16px;
-}
-
-/* When you mouse over the navigation links, change their color */
-.cartbar a:hover {
-    color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.cartbar .closebtn {
-    position: absolute;
-    top: 0;
-    left: 0px;
-    font-size: 36px;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    transition: margin-right .5s;
-    /* If you want a transition effect */
-    padding: 10px;
-    cursor: pointer;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .cartbar {
-        padding-top: 15px;
-    }
-
-    .cartbar a {
-        font-size: 18px;
-    }
-}
-
-/* goto top button  */
-#gotoTop {
-    background-color: transparent;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    position: fixed;
-    bottom: 2%;
-    right: 1%;
-    transition: background-color .3s,
-        opacity .5s, visibility .5s;
-    display: none;
-    z-index: 1000;
-}
-
-#gotoTop i {
-    padding: 12px;
-    font-size: 22px;
-}
-
-#gotoTop:hover {
-    cursor: pointer;
-}
-
-.spinner-border.loader {
-    display: none;
-}
-
-.checkout-form form.main input {
-    border-radius: 99em;
-}
-
-.checkout-form form textarea {
-    border-radius: .99em;
-}
-
-.checkout-form tbody {
-    border-bottom: 5px solid white;
-}
-
-table {
-    margin-bottom: 0 !important;
-}
-
-.category-overlay {
-    top: 0;
-    background-color: white;
-    width: 200px;
-    height: 400px;
-    z-index: 1;
-    border-bottom: 1px solid #DC3545;
-}
-
-.category-overlay ul a {
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.category-overlay ul li:hover {
-    background-color: #89C74A;
-    color: white;
-}
-
-.category-overlay ul li:hover i {
-    color: white !important;
-}
-
-.category-overlay ul li {
-    padding-bottom: .6rem;
-    padding-top: .6rem;
-    padding-left: 20px;
-}
-
-.header .search-form {
-    width: 60%;
-}
-
-.promo .promo-img {
-    position: absolute;
-    width: 55%;
-    top: -45px;
-}
-
-.title {
-    font-weight: 600;
-}
-
-.promo .img1,
-.promo .title {
-    border-right: 2px solid wheat;
-}
-
-.promo .daily-offer {
-    animation: color 5s infinite;
-}
-
-@keyframes color {
-    0% {
-        background-color: #4e73df;
-    }
-
-    25% {
-        background-color: #1cc88a;
-    }
-
-    50% {
-        background-color: #f6c23e;
-    }
-
-    75% {
-        background-color: #e74a3b;
-    }
-
-    100% {
-        background-color: #858796;
-    }
-}
-
-.product-img-overlay {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.back-home {
-    color: #002E5B !important;
-}
-
-.name-overflow {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.wrap.hover:hover {
-    border: 2px solid #89C74A;
-}
-
-.wrap.product a:first-child {
-    color: black !important;
-}
-
-.banner {
-    border-top-left-radius: 0.99rem !important;
-    border-top-right-radius: 0.99rem !important;
-}
-
-.wrap.product {
-    padding-bottom: 15px;
-    border: .05rem solid #dfdada;
-    border-radius: 0.99rem !important;
-}
-
-.product-offer-badge {
-    top: 1%;
-    left: 10%;
-}
-
-/* quantity */
-.number span {
-    cursor: pointer;
-}
-
-.number {
-    display: flex;
-}
-
-.minus,
-.plus {
-    width: 34px;
-    height: 34px;
-    border-radius: 4px;
-    padding: 5px;
-    vertical-align: middle;
-    text-align: center;
-}
-
-.number input {
-    height: 34px;
-    width: 100px;
-    text-align: center;
-    font-size: 26px;
-    border: 1px solid #DC3545;
-    border-radius: 4px;
-    vertical-align: middle;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-/* star  */
-.star {
-    color: orange;
-}
-
-.stars {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-}
-
-.stars__star-icon {
-    stroke: #343a40;
-    stroke-width: 2px;
-    fill: transparent;
-    transition: .1s all;
-}
-
-.stars__star {
-    width: 34px;
-    height: 34px;
-    position: relative;
-    cursor: pointer;
-    margin: 10px;
-}
-
-.stars__checkbox {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.stars__star:hover>.stars__star-icon {
-    fill: #343a40;
-}
-
-.stars__star:hover~.stars__star>.stars__star-icon {
-    fill: #343a40;
-}
-
-.stars__checkbox:checked+.stars__star>.stars__star-icon {
-    fill: #343a40;
-}
-
-.stars__checkbox:checked~.stars__star>.stars__star-icon {
-    fill: #343a40;
-}
-
-@media only screen and (max-width: 768px) {
-    .name.pd {
-        padding-top: 20px !important;
-    }
-
-    .cart-view {
-        background: none;
-    }
-
-    #main {
-        padding: 0;
-    }
-}
-
-@media only screen and (max-width: 425px) {
-    .testimonial img
-    {
-        width: 30% !important;
-    }
-    .nav-bottom {
-        background-color: #89C74A !important;
-    }
-
-    .nav-bottom i {
-        color: black !important;
-    }
-
-    .nav-bottom a {
-        color: black !important;
-    }
-
-    .nav-bottom span {
-        color: black !important;
-    }
-
-    .top-header-list {
-        justify-content: center !important;
-    }
-
-    .category-overlay {
-        display: none;
-    }
-
-    .social {
-        display: none;
-    }
-
-    .promo .promo-img {
-        position: absolute;
-        width: 67%;
-        top: 10px;
-    }
-
-    .carousel-item img {
-        height: auto !important;
-    }
-
-    .logo {
-        text-align: center;
-        padding-top: 1rem;
-    }
-
-    .logo img {
-        width: 50%;
-        border: none !important;
-        box-shadow: none !important;
-    }
-}
+body{font-family:'Open Sans',sans-serif}ul{list-style-type:none!important;padding:0!important}.footer .footer-menu li{padding-bottom:5px!important}a{color:wheat!important;text-decoration:none!important}.footer .footer-menu a:hover{color:#fff!important}ul.flex{display:flex}.newslater{border-radius:99em}.header .navbar a.navbar-brand{width:20%}#headerCategories .header-sub-menu{width:205px;right:0;z-index:99}#headerCategories .header-sub-menu li{color:#000!important}#headerCategories .header-sub-menu li:hover>i{color:#dc3545}#headerCategories:hover>#categories-drop-down{display:block!important}.breadcrumb a{color:#002e5b!important}.breadcrumb .row{padding-left:15px;padding-right:15px}.alert a{color:#002e5b!important}.product-details-header .cart .number input,a{width:100%}.cart-view{position:fixed;top:40%;right:0;box-sizing:border-box;z-index:9999}.cart-view hr{margin:0!important}.cart-view img{padding:8px 0 8px 0}.testimonial img{border-radius:50%;border:5px solid gray;width:10%!important;display:initial!important}.side-menu-bar{height:100%;width:0;position:fixed;z-index:2000;top:0;left:0;overflow-x:hidden;transition:.5s}.side-menu-bar ul{padding-left:20px!important;padding-right:20px!important}.side-menu-bar ul li{padding-bottom:.25rem;padding-top:.25rem;color:wheat!important}.side-menu-bar .side-menu-closebtn{position:absolute;top:9px;text-decoration:none;color:red!important;right:-80%;font-size:45px}.footer-menu-list a{text-decoration:none}.cartbar{height:100%;width:0;position:fixed;z-index:2000;top:0;right:0;background-color:#36344d;overflow-x:hidden;padding-top:60px;transition:.5s}.cartbar a{text-decoration:none;color:#818181;display:block;transition:.3s}.cartbar a.closebtn{padding:8px 8px 8px 16px}.cartbar a:hover{color:#f1f1f1}.cartbar .closebtn{position:absolute;top:0;left:0;font-size:36px}#main{transition:margin-right .5s;padding:10px;cursor:pointer}@media screen and (max-height:450px){.cartbar{padding-top:15px}.cartbar a{font-size:18px}}#gotoTop{background-color:transparent;width:50px;height:50px;text-align:center;position:fixed;bottom:2%;right:1%;transition:background-color .3s,opacity .5s,visibility .5s;display:none;z-index:1000}#gotoTop i{padding:12px;font-size:22px}#gotoTop:hover{cursor:pointer}.spinner-border.loader{display:none}.checkout-form form.main input{border-radius:99em}.checkout-form form textarea{border-radius:.99em}.checkout-form tbody{border-bottom:5px solid #fff}table{margin-bottom:0!important}.category-overlay{top:0;background-color:#fff;width:200px;height:400px;z-index:1;border-bottom:1px solid #dc3545}.category-overlay ul a{text-decoration:none;font-weight:600}.category-overlay ul li:hover{background-color:#89c74a;color:#fff}.category-overlay ul li:hover i{color:#fff!important}.category-overlay ul li{padding-bottom:.6rem;padding-top:.6rem;padding-left:20px}.header .search-form{width:60%}.promo .promo-img{position:absolute;width:55%;top:-45px}.title{font-weight:600}.promo .img1,.promo .title{border-right:2px solid wheat}.promo .daily-offer{animation:color 5s infinite}@keyframes color{0%{background-color:#4e73df}25%{background-color:#1cc88a}50%{background-color:#f6c23e}75%{background-color:#e74a3b}100%{background-color:#858796}}.product-img-overlay{transition:.5s ease;opacity:0;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);text-align:center}.back-home{color:#002e5b!important}.name-overflow{overflow:hidden;white-space:nowrap;text-overflow:ellipsis}.wrap.hover:hover{border:2px solid #89c74a}.wrap.product a:first-child{color:#000!important}.banner{border-top-left-radius:.99rem!important;border-top-right-radius:.99rem!important}.wrap.product{padding-bottom:15px;border:.05rem solid #dfdada;border-radius:.99rem!important}.product-offer-badge{top:1%;left:10%}.number span{cursor:pointer}.number{display:flex}.minus,.plus{width:34px;height:34px;border-radius:4px;padding:5px;vertical-align:middle;text-align:center}.number input{height:34px;width:100px;text-align:center;font-size:26px;border:1px solid #dc3545;border-radius:4px;vertical-align:middle}input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}.star{color:orange}.stars{display:flex;flex-wrap:wrap;align-items:center;flex-direction:row-reverse;justify-content:flex-end}.stars__star-icon{stroke:#343a40;stroke-width:2px;fill:transparent;transition:.1s all}.stars__star{width:34px;height:34px;position:relative;cursor:pointer;margin:10px}.stars__checkbox{opacity:0;width:0;height:0}.stars__star:hover>.stars__star-icon{fill:#343a40}.stars__star:hover~.stars__star>.stars__star-icon{fill:#343a40}.stars__checkbox:checked+.stars__star>.stars__star-icon{fill:#343a40}.stars__checkbox:checked~.stars__star>.stars__star-icon{fill:#343a40}@media only screen and (max-width:768px){.name.pd{padding-top:20px!important}.cart-view{background:0 0}#main{padding:0}}@media only screen and (max-width:425px){.testimonial img{width:30%!important}.nav-bottom{background-color:#89c74a!important}.nav-bottom #sideMenuBtn{padding-left:0;padding-right:0}.nav-bottom i{color:#000!important}.nav-bottom a{color:#000!important}.nav-bottom span{color:#000!important}.top-header-list{justify-content:center!important}.category-overlay{display:none}.social{display:none}.promo .promo-img{position:absolute;width:67%;top:10px}.carousel-item img{height:auto!important}.logo{text-align:center;padding-top:1rem}.logo img{width:50%;border:none!important;box-shadow:none!important}}
