--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -1,36 +1,56 @@
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif
 }
 
 ul {
     list-style-type: none !important;
     padding: 0 !important
 }
-/* loading  */
+
+.serach-overlay {
+    z-index: 1021
+}
+
+.page-item a {
+    color: black !important
+}
+
+.pagination-wrap {
+    text-align: center !important
+}
+
+.pagination-wrap nav {
+    display: inline-block !important
+}
+
 .loading-wrap {
-	align-items: center;
-	background: #012;
+    align-items: center;
+    background: #012;
     justify-content: center;
     position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 1030;
     width: 100% !important;
     opacity: .9;
-    display: flex;
+    display: flex
 }
+
 #lm {
-	animation: rotation 1s linear 0s normal infinite none running;
-	background-color: transparent;
-	border-radius: 100%;
-	box-shadow: 0 .5rem 0.12rem 0 inset #fff, 0 -.5rem 2rem -1rem #fff;
-	height: 5rem;
-	width: 5rem;
+    animation: rotation 1s linear 0s normal infinite none running;
+    background-color: transparent;
+    border-radius: 100%;
+    box-shadow: 0 .5rem .12rem 0 inset #fff, 0 -.5rem 2rem -1rem #fff;
+    height: 5rem;
+    width: 5rem
 }
+
 @keyframes rotation {
-	100% {transform: rotate(360deg)}
+    100% {
+        transform: rotate(360deg)
+    }
 }
 
 .footer .footer-menu li {
@@ -93,19 +113,22 @@ ul.flex {
 a {
     width: 100%
 }
-.cartaria-width{
-    width: 50% !important;
+
+.cartaria-width {
+    width: 50% !important
 }
-.cartbtn-width{
-    margin-right: 50% !important;
+
+.cartbtn-width {
+    margin-right: 50% !important
 }
+
 .cart-view {
     position: fixed;
     top: 40%;
     right: 0;
     box-sizing: border-box;
     z-index: 1021;
-    transition: 1s;
+    transition: 1s
 }
 
 .cart-view hr {
@@ -168,7 +191,7 @@ a {
     background-color: #36344d;
     overflow-x: hidden;
     padding-top: 60px;
-    transition: 1s;
+    transition: 1s
 }
 
 .cartbar a {
@@ -195,7 +218,6 @@ a {
 
 #main {
     transition: 1s;
-    padding: 10px;
     cursor: pointer
 }
 
@@ -230,6 +252,7 @@ a {
 #gotoTop:hover {
     cursor: pointer
 }
+
 .checkout-form form.main input {
     border-radius: 99em
 }
@@ -453,12 +476,14 @@ input[type=number] {
 }
 
 @media only screen and (max-width:768px) {
-    .cartaria-width{
-        width: 70% !important;
+    .cartaria-width {
+        width: 70% !important
     }
-    .cartbtn-width{
-        margin-right: 70% !important;
+
+    .cartbtn-width {
+        margin-right: 70% !important
     }
+
     .name.pd {
         padding-top: 20px !important
     }
@@ -473,12 +498,14 @@ input[type=number] {
 }
 
 @media only screen and (max-width:425px) {
-    .cartaria-width{
-        width: 100% !important;
+    .cartaria-width {
+        width: 100% !important
     }
-    .cartbtn-width{
-        margin-right: 100% !important;
+
+    .cartbtn-width {
+        margin-right: 100% !important
     }
+
     .testimonial img {
         width: 30% !important
     }
